# sat-solver

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: backtrack.rs  clause.rs  conflict.rs  lib.rs  literal.rs  solver.rs
